# Enterprise-RAG-Platform-for-Energy-Documentation-A

./: AWS_ACCOUNT_SETUP.md  CI_CD_QUICKREF.md  CI_CD_SUMMARY.md  Dockerfile  IMPLEMENTATION_STEPS.md  SETUP_COMPLETE.md  debug_server.py  main.py  pyproject.toml  requirements.txt  test.py  test_api.py
.aws/: CLOUDFORMATION_GUIDE.md  DEPLOYMENT_GUIDE.md  deploy.sh  task-definition-dev.json  task-definition-prod.json  template.yml
.github/: GITHUB_SETUP.md
.github/workflows/: ci.yaml
data/: eval_results.csv  golden_eval.csv
data/faiss_index/: index.faiss  index.pkl
energy_docs_chat/config/: config.yaml
energy_docs_chat/exceptions/: custom_exception.py
energy_docs_chat/logger/: custom_logger.py
energy_docs_chat/prompts/: prompts.py
energy_docs_chat/src/chat_with_doc/: retrieval.py
energy_docs_chat/src/data_ingestion/: data_ingestion.py
energy_docs_chat/utils/: config_loader.py  model_loader.py
notebook/: analysis.ipynb  rag.ipynb
notebook/logs/: evaluations.ipynb
static/: app.js  index.html  styles.css
test/: ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  conftest.py  pytest.ini  test_api_endpoints.py  test_mocking_strategies.py  test_retrieval_integration.py  test_retrieval_unit.py
